--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         padding: 0;
         font-family: "Urbanist", sans-serif;
       }
+      body {
+        background-color: #e0e0e0;
+      }
       @media screen and (max-width: 768px) {
       }
     </style>
